--- a/src/views/admin/oficinas/index.ejs
+++ b/src/views/admin/oficinas/index.ejs
@@ -54,7 +54,7 @@
                         <line x1="21" y1="21" x2="15" y2="15"></line>
                       </svg>
                     </span>
-                    <input type="text" class="form-control d-inline-block me-3" id="buscarOficBox" name="part"
+                    <input type="text" class="form-control d-inline-block" id="buscarOficBox" name="part"
                       placeholder="Buscar..." aria-label="Buscar en oficinas">
                   </div>
                 </form>
