--- a/src/views/user/formularios/pendientes/index.ejs
+++ b/src/views/user/formularios/pendientes/index.ejs
@@ -53,7 +53,7 @@
                         <line x1="21" y1="21" x2="15" y2="15"></line>
                       </svg>
                     </span>
-                    <input type="text" class="form-control d-inline-block me-3" id="buscarFormBox" name="part"
+                    <input type="text" class="form-control d-inline-block" id="buscarFormBox" name="part"
                       placeholder="Buscar..." aria-label="Buscar en formularios">
                   </div>
                 </form>
