--- a/src/views/admin/cargas/index.ejs
+++ b/src/views/admin/cargas/index.ejs
@@ -50,7 +50,7 @@
                           <line x1="21" y1="21" x2="15" y2="15"></line>
                         </svg>
                       </span>
-                      <input type="text" class="form-control d-inline-block me-3" id="buscarCargaBox" name="part"
+                      <input type="text" class="form-control d-inline-block" id="buscarCargaBox" name="part"
                         placeholder="Buscar..." aria-label="Buscar en cargas">
                     </div>
                   </form>
