--- a/src/views/admin/formularios/resueltos/referencias/index.ejs
+++ b/src/views/admin/formularios/resueltos/referencias/index.ejs
@@ -57,7 +57,7 @@
                         <line x1="21" y1="21" x2="15" y2="15"></line>
                       </svg>
                     </span>
-                    <input type="text" class="form-control d-inline-block me-3" id="buscarRefeBox" name="part"
+                    <input type="text" class="form-control d-inline-block" id="buscarRefeBox" name="part"
                       placeholder="Buscar..." aria-label="Buscar en referencias">
                   </div>
                 </form>
