--- a/src/views/admin/historicos/index.ejs
+++ b/src/views/admin/historicos/index.ejs
@@ -53,7 +53,7 @@
                       <line x1="21" y1="21" x2="15" y2="15"></line>
                     </svg>
                   </span>
-                  <input type="text" class="form-control d-inline-block me-3" id="buscarHistBox" name="part"
+                  <input type="text" class="form-control d-inline-block" id="buscarHistBox" name="part"
                     placeholder="Buscar..." aria-label="Buscar en históricos">
                 </div>
               </form>
